--- a/docs/layouts/_default/baseof.html
+++ b/docs/layouts/_default/baseof.html
@@ -43,10 +43,10 @@
 				<script src="{{ $.Site.BaseURL }}{{ . }}"></script>
 			{{- end }}
 
-			{{ with .Site.Params.highlightjs -}}
-			<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.3.0/highlight.min.js"></script>
-			<script>hljs.initHighlightingOnLoad();</script>
-			{{ end }}
+      <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/agate.min.css" type="text/css" />
+      <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+      <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/yaml.min.js"></script>
+      <script>hljs.initHighlightingOnLoad();</script>
 
 			{{ template "_internal/google_analytics.html" . }}
 		</div>
